refactor: 简化部分代码并删除无用的hub文件